--- a/config.toml
+++ b/config.toml
@@ -6,6 +6,7 @@ theme = "forty"
 [params]
     title = "Nicola Timson"
     major = "Nicola Timson"
+    coverimageurl = "images/cover.jpg"
     subtitle = "Lorem Ipsum"
     subtitleline2 = "2nd line"
     bannerCTA = "Get Started"
