:wrench: Add LinkedIn link

--- a/config.toml
+++ b/config.toml
@@ -20,4 +20,4 @@ theme = "forty"
       # facebook = "facebook"
       # instagram = "instagram"
       # github = "github"
-      # linkedin = "linkedin"
+      linkedin = "https://www.linkedin.com/in/nicola-timson-463506128/"
