--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "url": "https://github.com/curttimson/nixxi-timson/issues"
   },
   "dependencies": {
+    "angular": "^1.6.6",
     "hugo-theme-forty": "git@github.com:curttimson/hugo-theme-forty.git#0.9.0"
   },
   "homepage": "https://github.com/curttimson/nixxi-timson#readme",
