:heavy_plus_sign: Add karma dependency

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/curttimson/nixxi-timson#readme",
   "devDependencies": {
     "gulp": "^3.9.1",
-    "gulp-gh-pages": "^0.5.4"
+    "gulp-gh-pages": "^0.5.4",
+    "karma": "^1.7.1"
   }
 }
