:sparkles: Switch to massively theme

--- a/config.toml
+++ b/config.toml
@@ -1,25 +1,39 @@
-title = "My New Hugo Site"
-baseURL = "https://curttimson.github.io/nixxi-timson/"
 languageCode = "en-us"
-theme = "forty"
+title = "Nicola Timson"
+baseURL = "http://localhost:1313/"
+theme = "massively"
 
-[params]
-    title = "Nicola Timson"
-    major = "Nicola Timson"
-    coverimageurl = "images/cover.jpg"
-    subtitle = "Lorem Ipsum"
-    subtitleline2 = "2nd line"
-    bannerCTA = "View Portfolio"
-    copyrightText = "Nicola Timson"
-    googleAnalyticsId = "UA-107434352-2"
+[params.posts]
+    foldername = "post"
 
-    [params.author]
-      firstname = "Nicola"
-      lastname = "Timson"
+[params.settings]
+    googleanalytics = "UA-107434352-2"
+    disqus = "hugo-massively"
 
-    [params.social]
-      twitter = "https://twitter.com/_nixxi"
+
+
+ # title = "My New Hugo Site"
+#baseURL = "https://curttimson.github.io/nixxi-timson/"
+#languageCode = "en-us"
+#theme = "forty"
+
+#[params]
+    #title = "Nicola Timson"
+    #major = "Nicola Timson"
+    #coverimageurl = "images/cover.jpg"
+    #subtitle = "Lorem Ipsum"
+    #subtitleline2 = "2nd line"
+    #bannerCTA = "View Portfolio"
+    #copyrightText = "Nicola Timson"
+    #googleAnalyticsId = "UA-107434352-2"
+
+    #[params.author]
+      #firstname = "Nicola"
+     # lastname = "Timson"
+
+    #[params.social]
+   #   twitter = "https://twitter.com/_nixxi"
       # facebook = "facebook"
       # instagram = "instagram"
       # github = "github"
-      linkedin = "https://www.linkedin.com/in/nicola-timson-463506128/"
+  #    linkedin = "https://www.linkedin.com/in/nicola-timson-463506128/"
