:memo: Update intro yaml content

--- a/data/intro.yaml
+++ b/data/intro.yaml
@@ -1,7 +1,7 @@
 title:
-- line: 'This is'
-- line: 'Massively'
+- line: 'Nicola'
+- line: 'Timson'
 
 description:
-- line: 'A free, fully responsive HTML5 + CSS3 site template designed by @ajlkn for HTML5 UP'
-- line: 'and released for free under the Creative Commons license.'
+- line: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sem sem, dapibus in auctor sit amet'
+- line: 'Mauris dignissim vehicula ipsum, quis accumsan risus rhoncus ut'
