--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "angular": "^1.6.6",
     "hugo-theme-massively": "git@github.com:curttimson/hugo-theme-massively.git#0.5.0",
+    "jquery": "^3.3.1",
     "unitegallery": "^1.7.28"
   },
   "homepage": "https://github.com/curttimson/nixxi-timson#readme",
