:speech_balloon: Update intro text

--- a/data/intro.yaml
+++ b/data/intro.yaml
@@ -3,5 +3,4 @@ title:
 - line: 'Timson'
 
 description:
-- line: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sem sem, dapibus in auctor sit amet'
-- line: 'Mauris dignissim vehicula ipsum, quis accumsan risus rhoncus ut'
+- line: 'Fine Artist and Secondary School Teacher'
