--- a/package.json
+++ b/package.json
@@ -17,8 +17,41 @@
   },
   "dependencies": {
     "angular": "^1.6.6",
-    "hugo-theme-massively": "git@github.com:curttimson/hugo-theme-massively.git#0.5.0",
-    "unitegallery": "^1.7.28"
+    "unitegallery": "^1.7.28",
+    "babel-eslint": "^6.1.2",
+    "babel-loader": "^6.2.4",
+    "babel-plugin-syntax-object-rest-spread": "^6.13.0",
+    "babel-plugin-transform-class-properties": "^6.10.2",
+    "babel-plugin-transform-object-assign": "^6.8.0",
+    "babel-plugin-transform-object-rest-spread": "^6.8.0",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.11.1",
+    "babel-register": "^6.11.6",
+    "browser-sync": "^2.13.0",
+    "css-loader": "^0.23.1",
+    "cssnano": "^3.9.1",
+    "date-fns": "^1.27.2",
+    "eslint": "^3.1.1",
+    "eslint-plugin-import": "^1.11.1",
+    "exports-loader": "^0.6.3",
+    "file-loader": "^0.9.0",
+    "gotrue-js": "^0.9.1",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-postcss": "^6.1.1",
+    "gulp-replace": "^0.5.4",
+    "gulp-util": "^3.0.7",
+    "imports-loader": "^0.6.5",
+    "netlify-cms": "^1.0.2",
+    "postcss-cssnext": "^2.7.0",
+    "postcss-import": "^11.0.0",
+    "postcss-loader": "^0.9.1",
+    "postcss-uncss": "^0.14.0",
+    "react": "15.6.1",
+    "uncss": "^0.14.1",
+    "url-loader": "^0.5.7",
+    "webpack": "^3.0.0",
+    "whatwg-fetch": "^1.0.0"
   },
   "homepage": "https://github.com/curttimson/nixxi-timson#readme",
   "devDependencies": {
