--- a/package.json
+++ b/package.json
@@ -67,6 +67,11 @@
     "jasmine-core": "^2.8.0",
     "karma": "^1.7.1",
     "karma-chrome-launcher": "^2.2.0",
-    "karma-jasmine": "^1.1.0"
+    "karma-jasmine": "^1.1.0",
+    
+    "gulp-inject": "^4.2.0",
+    "gulp-svgmin": "^1.2.3",
+    "gulp-svgstore": "^6.1.0",
+    "svg-sprite-loader": "^0.1.2"
   }
 }
