--- a/site/static/admin/config.yml
+++ b/site/static/admin/config.yml
@@ -15,3 +15,13 @@ collections: # A list of collections the CMS should be able to edit
       - {label: "Intro Blurb", name: "description", widget: "text"}
       - {label: "Image", name: "image", widget: "image", required: false}
       - {label: "Body", name: "body", widget: "markdown"}
+
+  - label: 'config'
+    name: 'configs'
+    files:
+      - name: 'social'
+        label: 'social links'
+        file: 'site/data/social.yaml'
+        fields:
+          - name: 'twitter'
+            label: 'twitter'
