--- a/site/data/social.yaml
+++ b/site/data/social.yaml
@@ -1,1 +1,3 @@
 twitter: 'https://twitter.com/_nixxi'
+linkedin: 'https://www.linkedin.com/in/nicola-timson-463506128/'
+flickr: 'http://flickr.com/photos/nixxitimson/'
