:wrench: Update config to nicolatimson.co.uk

--- a/site/config.toml
+++ b/site/config.toml
@@ -1,6 +1,6 @@
 languageCode = "en-us"
 title = "Nicola Timson"
-baseURL = "https://nixxi.netlify.com/"
+baseURL = "https://nicolatimson.co.uk/"
 theme = "massively"
 
 [params.posts]
